little change index and header

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,8 +1,12 @@
-%h1
-  Pezenki.ru - самый большая библиотека текстов и аккордов песен
-%pre
-  Этот сайт содержит тексты песен и аккорды.
-  Можно зайти из под вконтактов.
-  Тексты(и аккорды) и Исполнителей можно добавлять вручную.
-  Сайт обновляет Тексты и Исполнителей с сайтов-доноров.
+.jumbotron
+  %h1
+    Самообновляемая библиотека текстов песен
+  %p
+    Этот сайт содержит тексты песен и аккорды.
+    %br
+    Можно зайти из под вконтактов.
+    %br
+    Тексты и аккорды можно добавлять вручную.
+    %br
+    Сайт обновляет Тексты и Исполнителей с сайтов-доноров.
 
