--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -12,7 +12,7 @@
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       %ul.nav.navbar-nav
         %li.active
-          %a{:href => "#"} Ссылка
+          = link_to 'Сайты-доноры', donors_path
         %li
           %a{:href => "#"} Ссылка
         %li.dropdown
